--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,7 @@
 == README
 
-A carousel (slider) inside a blank rails app.
+A Bootstrap carousel example inside a blank rails app.
 
 Uses Slim, Coffeescript and Sass (SCSS)
 
-Demo: http://de-carousel.herokuapp.com/
-
+Demo coming soon
